--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "@types/react": "^19.1.1 ",
     "@types/react-dom": "^19.1.1 ",
     "@vitejs/plugin-react": "^5.0.1",
+    "@tailwindcss/postcss": "^4.1.12",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.33.0",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "gh-pages": "^6.3.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
     "vite": "^6.3.0"
   }
 }
